# shader-lights

./: .gitignore  CMakeLists.txt  README.md  shader-lights.sln
VisualStudio/: shader-lights.vcxproj  shader-lights.vcxproj.filters
include/: BasicShaderCallBack.h  CustomNode.h  EventReceiver.h  Librarian.h
librarian/: Librarian.3ds
shaders/: clouds.frag  default.frag  default.vert  diffuse.frag  diffuse.vert  light.vert  specular.frag  specular.vert  version2.frag  version2.vert
src/: BasicShaderCallBack.cpp  CustomNode.cpp  EventReceiver.cpp  Librarian.cpp  main.cpp
